--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "rc-slider": "^11.1.6",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -34,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/rc-slider": "^9.3.1",
+    "@types/react-copy-to-clipboard": "^5.0.7"
   }
 }
